2006-11-03  Dan Winship  <danw@novell.com>

	* libsoup/Makefile.am (libsoup_2_2_la_LDFLAGS): fix build on
	cygwin. From "Cygwin Ports maintainer", #321827.

2006-07-24  Dan Winship  <danw@novell.com>

	* configure.in: 2.2.96. bump AGE and CURRENT for new API

	* NEWS: update

	* libsoup/soup-xmlrpc-message.c (soup_xmlrpc_message_from_string):
	New, from Fernando Herrera, bug 348532.

2006-07-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-auth.c (soup_auth_new_from_header_list): if the
	constructed auth doesn't have a realm, it's invalid, as per RFC
	2617. Based on a patch from Nate Nielsen on libsoup-list.
	(soup_auth_get_realm): remove "if available" from docs; all auths
	always have a realm.

	* libsoup/soup-message-server-io.c (get_response_headers): If the
	server handler set a Content-Length header on the message, don't
	add a second one. (Preserves compatibility with an old hacky way
	that people might have been handling HEAD from SoupServer.)

	* README: update to mention mailing list and bugzilla

	* HACKING: kill this since there's nothing here that isn't either
	obvious, or redundant with the README

2006-07-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-server-message.c (soup_server_message_init):
	initialize encoding to SOUP_TRANSFER_CONTENT_LENGTH rather than
	SOUP_TRANSFER_UNKNOWN, since SOUP_TRANSFER_UNKNOWN has never
	actually worked here, and so there was an undocumented requirement
	that you manually set the encoding on every response
	(which SoupServer itself was not doing on internal errors).
	Problem pointed out by Dennis Jacobfeuerborn on libsoup-list.
	(soup_server_message_set_encoding): reject the new
	SoupTransferEncoding values, for compatibility

	* libsoup/soup-message.h (SoupTransferEncoding): Clarify that
	SOUP_TRANSFER_UNKNOWN is essentially an error value, since in the
	public API, it always has been, due to bugs. Add some new values,
	currently just for internal use: SOUP_TRANSFER_NONE (for cases