@@ -133,18 +133,12 @@ AC_ARG_ENABLE(ssl,
 	      [  --enable-ssl             Turn on Secure Sockets Layer support [default=yes]],,
 	      enable_ssl=auto)
 
-AC_ARG_ENABLE(ssl-link-static, 
-	      [  --enable-static-ssl      Link with SSL library statically [default=no]],
-	      [enable_static_ssl=yes])
-
-AC_ARG_ENABLE(libgpg-error,
-              [  --enable-libgpg-error    Work around broken libgcrypt-config scripts],
-              enable_libgpg_error=yes, enable_libgpg_error=no)
-
 if test "$enable_ssl" != "no"; then
-	AM_PATH_LIBGNUTLS(1.0.0, have_ssl=yes, have_ssl=no)
-
-	if test "$have_ssl" != "yes"; then
+	PKG_CHECK_MODULES(LIBGNUTLS, gnutls, have_ssl=yes, have_ssl=no)
+	if test "$have_ssl" = "yes"; then
+		AC_DEFINE(HAVE_SSL, 1, [Defined if you have SSL support])
+		SSL_REQUIREMENT="gnutls"
+	else
 		if test "$enable_ssl" = "auto"; then
 			AC_MSG_WARN(Disabling SSL support);
 			enable_ssl=no;
@@ -154,33 +148,9 @@ if test "$enable_ssl" != "no"; then
 	fi
 fi
 
-LIBGNUTLS_LIBS_STATIC=""
-if test "$enable_ssl" != "no"; then
-	AC_DEFINE(HAVE_SSL, 1, [Defined if you have SSL support])
-
-	libgpg_error_libs_static=""
-	libgpg_error_libs=""
-
-	if test "$enable_libgpg_error" = "yes"; then
-		AM_PATH_GPG_ERROR("0.4")
-		if test "$GPG_ERROR_LIBS" = ""; then
-			AC_MSG_ERROR([libgpg-error is needed])
-		fi
-		gpg_error_prefix=$($GPG_ERROR_CONFIG --prefix)
-		libgpg_error_libs_static="$gpg_error_prefix/lib/libgpg-error.a"
-		libgpg_error_libs="$GPG_ERROR_LIBS"
-	fi
-
-	if test "$enable_static_ssl" = "yes"; then
-		gnutls_libdir=`$LIBGNUTLS_CONFIG --exec-prefix`/lib
-		LIBGNUTLS_LIBS=""
-		LIBGNUTLS_LIBS_STATIC="$gnutls_libdir/libgnutls.a $gnutls_libdir/libgcrypt.a $libgpg_error_libs_static"
-	fi
-fi
-
 AC_SUBST(LIBGNUTLS_CFLAGS)
 AC_SUBST(LIBGNUTLS_LIBS)
-AC_SUBST(LIBGNUTLS_LIBS_STATIC)
+AC_SUBST(SSL_REQUIREMENT)
 
 dnl ***************
 dnl *** gtk-doc ***
